@@ -3,9 +3,12 @@ package sa.com.cloudsolutions.antikythera.parser;
 import com.github.javaparser.StaticJavaParser;
 import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.Node;
+import com.github.javaparser.ast.NodeList;
 import com.github.javaparser.ast.body.MethodDeclaration;
+import com.github.javaparser.ast.body.TypeDeclaration;
 import com.github.javaparser.ast.expr.Expression;
 import com.github.javaparser.ast.expr.MethodCallExpr;
+import com.github.javaparser.ast.type.Type;
 import com.github.javaparser.ast.visitor.VoidVisitorAdapter;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -19,6 +22,8 @@ import java.io.PrintStream;
 import java.util.List;
 import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -30,23 +35,54 @@ class TestOverlord extends TestHelper {
         System.setOut(new PrintStream(outContent));
     }
 
+    /**
+     * Test finding the method declaration when type arguments are not present.
+     */
     @Test
-    void testFindMethodDeclaration() throws AntikytheraException, ReflectiveOperationException {
+    void testFindMethodDeclaration() {
         List<MethodDeclaration> mds = compiler.getCompilationUnit().findAll(MethodDeclaration.class);
         assertEquals(4, mds.size());
 
-        List<MethodCallExpr> expressions = mds.get(3).findAll(MethodCallExpr.class);
+        List<MethodCallExpr> methodCalls = mds.get(3).findAll(MethodCallExpr.class);
 
-        assertEquals(3, expressions.size());
-        Optional<MethodDeclaration> md = AbstractCompiler.findMethodDeclaration(expressions.get(0), mds);
+        /*
+         * Should be able to  locate three method calls in the class, finding the correspondnig
+         * methodDeclaration is another matter
+         */
+        assertEquals(3, methodCalls.size());
+        Optional<MethodDeclaration> md = AbstractCompiler.findMethodDeclaration(methodCalls.getFirst(),
+                AbstractCompiler.getPublicType(compiler.getCompilationUnit()));
+        assertTrue(md.isEmpty());
+        assertTrue(methodCalls.getFirst().getTypeArguments().isEmpty());
+
+    }
+
+    /**
+     * Test finding the method declaration when type arguments are present.
+     */
+    @Test
+    void testFindMethodDeclaration2() {
+        List<MethodDeclaration> mds = compiler.getCompilationUnit().findAll(MethodDeclaration.class);
+        List<MethodCallExpr> methodCalls = mds.get(3).findAll(MethodCallExpr.class);
+
+        TypeDeclaration<?> decl = AbstractCompiler.getPublicType(compiler.getCompilationUnit());
+        assertNotNull(decl);
+
+        MethodCallExpr mce = methodCalls.getFirst();
+        NodeList<Type> typeArguments = new NodeList<>();
+        typeArguments.add(StaticJavaParser.parseType("String"));
+        mce.setTypeArguments(typeArguments);
+
+        Optional<MethodDeclaration> md = AbstractCompiler.findMethodDeclaration(methodCalls.getFirst(), decl);
         assertTrue(md.isPresent());
+
         assertEquals("print", md.get().getNameAsString());
         assertEquals(1, md.get().getParameters().size());
 
-        md = AbstractCompiler.findMethodDeclaration(expressions.get(1), mds);
-        assertTrue(md.isPresent());
+        md = AbstractCompiler.findMethodDeclaration(methodCalls.get(1), decl);
+        assertTrue(md.isEmpty());
 
-        md = AbstractCompiler.findMethodDeclaration(expressions.get(2), mds);
+        md = AbstractCompiler.findMethodDeclaration(methodCalls.get(2), decl);
         assertTrue(md.isPresent());
     }
 
